Progressing slowly Making sure there's a GB general understanding of the emulator. More stuff to follow soon!

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,15 @@
             <figcaption>I know it's not the same as an emulator, but it's a start right? :)</figcaption>
         </figure>
     </div>
+    <div>
+        <laber for="rom-selector">Please, select a rom...</label>
+        <input type="file" id="rom-selector" alt="Select a Gameboy rom">
+    </div>
+    <div>
+        <canvas id="screen" width="160" height="144"></canvas>
+    </div>
+    <script src="scripts/GPU.js"></script>
+    <script src="scripts/CPU.js"></script>
     <script src="scripts/bootstrapper.js"></script>
 </body>
 
