--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,18 @@
     </div>
     <div>
         <laber for="rom-selector">Please, select a rom...</label>
-        <input type="file" id="rom-selector" alt="Select a Gameboy rom">
+            <input type="file" id="rom-selector" alt="Select a Gameboy rom">
     </div>
-    <div>
-        <canvas id="screen" width="160" height="144"></canvas>
-    </div>
+    <figure>
+        <div id="gbts">
+            <canvas id="screen" width="160" height="144"></canvas>
+        </div>
+        <figcaption><a id="reset">Reset</a> | <a id="run">Run</a></figcaption>
+    </figure>
     <script src="scripts/GPU.js"></script>
     <script src="scripts/CPU.js"></script>
-    <script src="scripts/bootstrapper.js"></script>
+    <script src="scripts/MMU.js"></script>
+    <script src="scripts/GbEngine.js"></script>
 </body>
 
 </html>
