Wiring up: - Setting a temporary icon - Wiring up events properly to the engine

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>GB Typescript</title>
+    <link href="images/gbicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="styles/app.css" type="text/css" />
 </head>
 
