Playing around a little bit

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <script src="scripts/GPU.js"></script>
     <script src="scripts/CPU.js"></script>
     <script src="scripts/MMU.js"></script>
+    <script src="scripts/Timer.js"></script>
     <script src="scripts/GbEngine.js"></script>
 </body>
 
