--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <script src="scripts/CPU.js"></script>
     <script src="scripts/MMU.js"></script>
     <script src="scripts/Timer.js"></script>
+    <script src="scripts/Opcodes.js"></script>
     <script src="scripts/GbEngine.js"></script>
 </body>
 
