More wiring up - It seems the emulator is doing something but still not showing something onscreen

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
         </div>
         <figcaption><a id="reset">Reset</a> | <a id="run">Run</a></figcaption>
     </figure>
+    <script src="scripts/Input.js"></script>
     <script src="scripts/GPU.js"></script>
     <script src="scripts/CPU.js"></script>
     <script src="scripts/MMU.js"></script>
