Making GbTs a more marketable piece Preparing it for a broader public

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,9 @@
 </head>
 
 <body>
+    <div class="corner-ribbon top-right sticky blue"><a target="_blank" href="https://github.com/UncleFirefox/GbTs">Fork me on Github</a></div>
     <div>
         <h1>GbTS: A Gameboy Emulator Using Typescript</h1>
-    </div>
-    <div id="image">
-        <figure>
-            <img src="images/gbstart.gif" />
-            <figcaption>I know it's not the same as an emulator, but it's a start right? :)</figcaption>
-        </figure>
     </div>
     <div>
         <laber for="rom-selector">Please, select a rom...</label>
@@ -28,6 +23,12 @@
         </div>
         <figcaption><a id="reset">Reset</a> | <a id="run">Run</a></figcaption>
     </figure>
+    <div id="image">
+        <figure>
+            <img src="images/gbstart.gif" />
+            <figcaption>I know it's not the same as an emulator, but it's a start right? :)</figcaption>
+        </figure>
+    </div>
     <script src="scripts/Input.js"></script>
     <script src="scripts/GPU.js"></script>
     <script src="scripts/CPU.js"></script>
