More CI changes

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div id="image">
         <figure>
             <img src="images/gbstart.gif" />
-            <figcaption>I know it's not the same as an emulator, but it's a start right??? :)</figcaption>
+            <figcaption>I know it's not the same as an emulator, but it's a start right?? ;)</figcaption>
         </figure>
     </div>
     <script src="scripts/Input.js"></script>
