Doing some cleanup plus a better look

--- a/JsGB/JsGB.html
+++ b/JsGB/JsGB.html
@@ -3,9 +3,9 @@
 <html>
 
 <head>
-	<link href="./scripts/index.css" type="text/css" rel="stylesheet">
-	<link href="./scripts/content.css" type="text/css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="./scripts/jsgb.css">
+	<link href="./styles/index.css" type="text/css" rel="stylesheet">
+	<link href="./styles/content.css" type="text/css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./styles/jsgb.css">
 	<script type="text/javascript" src="./scripts/jquery.min.js"></script>
 	<script type="text/javascript" src="./scripts/jsgb.js"></script>
 </head>
